# advent-of-code

./: .gitignore  .justfile  Cargo.toml  README.md
aoc/: Cargo.toml
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc-wasm/: Cargo.toml
aoc-wasm/crate/: Cargo.toml
aoc-wasm/crate/src/: lib.rs
aoc-wasm/js/: index.js
aoc-wasm/pkg/: aoc_wasm.d.ts  aoc_wasm.js  aoc_wasm_bg.d.ts  aoc_wasm_bg.js  aoc_wasm_bg.wasm  aoc_wasm_browser.js  package.json
aoc-wasm/src/: lib.rs
aoc/src/: error.rs  lib.rs
aoc/src/aoc2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.pest  day07.rs  mod.rs
aoc/src/aoc2018/: day01.rs  day02.rs  day03.pest  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  mod.rs
aoc/src/aoc2019/: day01.rs  day02.rs  mod.rs
aoc/src/aoc2019/input/: day07
aoc/src/aoc2020/: day01.rs  day02.rs  mod.rs
aoc/src/aoc2021/: day01.rs  day02.rs  day03.rs  mod.rs
aoc/src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  mod.rs
aoc/src/aoc2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  mod.rs
aoc/src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day07.rs  mod.rs
aoc/src/aoc2025/: day01.rs  day02.rs  mod.rs
day01/: Cargo.toml  part1.md  part2.md
day01/src/: main.rs
day02/: Cargo.toml  part1.md  part2.md
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml  part1.md  part2.md
day04/src/: main.rs
day05/: Cargo.toml  part1.md  part2.md
day05/src/: main.rs
day06/: Cargo.toml  part1.md  part2.md
day06/src/: main.rs
day07/: Cargo.toml  part1.md
day07/src/: main.rs
intcode/: Cargo.toml
intcode/src/: error.rs  intcode.rs  lib.rs
src/: aoc2017.rs  aoc2018.rs  aoc2019.rs  error.rs  lib.rs  main.rs
src/aoc2017/: day 01.md  day 04.md  day 06.md  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.pest  day07.rs
src/aoc2018/: day01.rs  day02.rs  day03.pest  day03.rs  day04.pest  day04.rs  day05.rs  day06.rs  day07.pest  day07.rs
src/aoc2019/: day01.rs  day02.rs  day03.rs  intcode.rs
src/aoc2020/: day01.rs  day02.rs  day03.rs
src/day01/: mod.rs
src/day02/: day 02.md  mod.rs
src/day03/: day 03.md  mod.rs
src/day04/: mod.rs
src/day05/: day 05.md  mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
