[package]
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]
edition = "2018"
name = "advent_of_code"
version = "0.1.0"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "aoc-cli"

[dependencies]
itertools = "0.8.0"
pest = "2.1.0"
pest_derive = "2.1.0"
chrono = "0.4.6"
structopt = "0.2.14"
