[package]
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]
edition = "2018"
name = "advent_of_code"
version = "0.1.0"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "aoc-cli"

[dependencies]
once_cell = "1.2.0"
regex = "1.3.1"
itertools = "0.8.2"
pest = "2.1.2"
pest_derive = "2.1.0"
chrono = "0.4.10"
structopt = "0.3.5"
