[package]
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]
edition = "2018"
name = "advent_of_code"
version = "0.1.0"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "aoc-cli"

[dependencies]
once_cell = "1.5.2"
regex = "1.4.2"
itertools = "0.10.1"
pest = "2.1.3"
pest_derive = "2.1.0"
chrono = "0.4.19"
structopt = "0.3.20"
nom = "7.1.0"
