[package]
name = "aoc-wasm"
version = "0.1.0"
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
advent_of_code = {path = "../../advent-of-code"}
serde_derive = "1.0.83"
serde = "1.0.83"

[dependencies.wasm-bindgen]
version = "0.2.29"
features = ["serde-serialize"]


