[package]
name = "aoc-wasm"
version = "0.1.0"
authors = ["Michael Rutter <michael.john.rutter@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
advent_of_code = {path = "../../advent-of-code"}
serde_derive = "1.0.103"
serde = "1.0.103"

[dependencies.wasm-bindgen]
version = "0.2.55"
features = ["serde-serialize"]


