[package]
authors = ["Michael Rutter <michael.protonmail@gmail.com>"]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"


[dependencies]
once_cell = "1.18.0"
regex = "1.7.0"
itertools = "0.12.0"
pest = "2.7.5"
pest_derive = "2.6.5"
chrono = "0.4.31"
nom = "7.1.3"
thiserror = "1.0.50"
intcode = { path = "../intcode" }
anyhow = "1.0.75"
