[package]
authors = ["Michael Rutter <michael.protonmail@gmail.com>"]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.20.3"
regex = "1.11.1"
itertools = "0.14.0"
pest = "2.7.15"
pest_derive = "2.7.15"
chrono = "0.4.39"
nom = "8.0.0"
thiserror = "2.0.11"
intcode = { path = "../intcode" }
anyhow = "1.0.96"
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
rayon = "1.10.0"
rand = "0.9.0"
num = "0.4.3"
