[package]
authors = ["Michael Rutter <michael.protonmail@gmail.com>"]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
regex = "1.12.2"
itertools = "0.14.0"
pest = "2.8.4"
pest_derive = "2.8.4"
chrono = "0.4.42"
nom = "8.0.0"
thiserror = "2.0.17"
intcode = { path = "../intcode" }
anyhow = "1.0.100"
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
rayon = "1.11.0"
rand = "0.9.2"
num = "0.4.3"
