[package]
name = "aoc-wasm"
authors = ["Michael Rutter <michael.john.rutter@gmail.com"]
description = "Wasm lib of advent_of_code rust lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
advent_of_code = {path = "../../../advent-of-code"}
cfg-if = "0.1.5"
wasm-bindgen = "0.2.25"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[features]
default-features = ["console_error_panic_hook"]
